--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 
 <body>
   <section>
-    <img src="/images/image-equilibrium.jpg" alt="background image">
-    <h1>Equilibrium #3429</h1>
+    <div class="img-container">
+      <img class="bg-image bg-hover" src="/images/image-equilibrium.jpg" alt="background image">
+      <div class="overlay"></div>
+    </div>
+    <h1 class="teal-hover">Equilibrium #3429</h1>
     <p>Our Equilibrium collection promotes balance and calm.</p>
     <div class="ether-row">
       <img src="/images/icon-ethereum.svg" alt="etherium logo">
@@ -23,13 +26,12 @@
       <img class="clock" src="/images/icon-clock.svg" alt="clock">
       <div class="sm-text">3 days left</div>
     </div>
-    <div>Creation of Jules Wyvern</div>
+    <div class="user">
+      <img class="avatar-img" src="/images/image-avatar.png" alt="avatar icon">
+      <div class="sm-text credit">Creation of <span class="teal-hover">Jules Wyvern</span></div>
+    </div>
   </section>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 
 </html>
