Fixed hover overlay extending past container 'View' image added to hover Fixed top margin

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   <section>
     <div class="img-container">
       <img class="bg-image bg-hover" src="/images/image-equilibrium.jpg" alt="background image">
-      <div class="overlay"></div>
+      <div class="overlay">
+        <div class="img-overlay">
+          <img class="icon-view" src="/images/icon-view.svg" alt="">
+        </div>
+      </div>
     </div>
     <h1 class="teal-hover">Equilibrium #3429</h1>
     <p>Our Equilibrium collection promotes balance and calm.</p>
