--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 <body>
   <section>
     <div class="img-container">
-      <img class="bg-image bg-hover" src="/images/image-equilibrium.jpg" alt="background image">
+      <img class="bg-image bg-hover" src="images/image-equilibrium.jpg" alt="background image">
       <div class="overlay">
         <div class="img-overlay">
-          <img class="icon-view" src="/images/icon-view.svg" alt="">
+          <img class="icon-view" src="images/icon-view.svg" alt="">
         </div>
       </div>
     </div>
     <h1 class="teal-hover">Equilibrium #3429</h1>
     <p>Our Equilibrium collection promotes balance and calm.</p>
     <div class="ether-row">
-      <img src="/images/icon-ethereum.svg" alt="etherium logo">
+      <img src="images/icon-ethereum.svg" alt="etherium logo">
       <div class="ether">0.041 ETH</div>
-      <img class="clock" src="/images/icon-clock.svg" alt="clock">
+      <img class="clock" src="images/icon-clock.svg" alt="clock">
       <div class="sm-text">3 days left</div>
     </div>
     <div class="user">
-      <img class="avatar-img" src="/images/image-avatar.png" alt="avatar icon">
+      <img class="avatar-img" src="images/image-avatar.png" alt="avatar icon">
       <div class="sm-text credit">Creation of <span class="teal-hover">Jules Wyvern</span></div>
     </div>
   </section>
